	PR middle-end/36575 	* fold-const (div_and_round_double) <ROUND_DIV_EXPR>: Fix typo.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140734 138bc75d-0d04-0410-961f-82ee72b054a4